--- a/portfolio.css
+++ b/portfolio.css
@@ -108,6 +108,12 @@
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.design img{
+   max-width: 100%; 
+   height: auto;
+} 
+
   
 .slider-container {
     position: relative;
